# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
authors = ["Rowan Hart <rowan.hart@intel.com>"]
# https://crates.io/category_slugs
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]
description = "SIMICS bindings and utilities for Rust"
documentation = ""
edition = "2021"
homepage = ""
keywords = ["simics", "simulator", "intel", "x86", "risc", "modeling"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = ""

[workspace]
resolver = "2"
members = [
    "cargo-simics-build",
    "ispm-wrapper",
    "simics",
    "simics-api-sys",
    "simics-macro",
    "simics-package",
    "simics-sign",
    "simics-test",
    "simics-build-utils",
    "tests/packages/hello-world",
]
default-members = [
    "cargo-simics-build",
    "ispm-wrapper",
    "simics",
    "simics-api-sys",
    "simics-macro",
    "simics-package",
    "simics-sign",
    "simics-test",
    "simics-build-utils",
    "tests/packages/hello-world",
]
exclude = []

[workspace.dependencies]
ispm-wrapper = { path = "ispm-wrapper" }
simics-api-sys = { path = "simics-api-sys" }
simics-macro = { path = "simics-macro" }
simics = { path = "simics", features = ["link"] }
simics-sign = { path = "simics-sign" }
simics-package = { path = "simics-package" }
simics-test = { path = "simics-test" }
simics-build-utils = { path = "simics-build-utils" }

[profile.dev]
# NOTE: rparth set to true to allow cargo test/cargo run to find libsimics-common,
# libvtutils, etc.
rpath = true

[profile.release]
# NOTE: rparth set to true to allow cargo test/cargo run to find libsimics-common,
# libvtutils, etc.
rpath = true
lto = true
codegen-units = 1
opt-level = 3
debug = true
