[package]
name = "simics-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = "4.3.0"
simics = { workspace = true }
tmp-dir.workspace = true

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics = { workspace = true }
artifact-dependency = { workspace = true }

[dev-dependencies]
simics = { workspace = true, features = ["link"] }
anyhow.workspace = true
tempdir = "0.3.7"
tracing = "0.1.37"
tracing-test = "0.2.4"
simics-fuzz = { workspace = true }


[features]
"6.0.28" = ["simics/6.0.28", "simics-fuzz/6.0.28"]
"6.0.31" = ["simics/6.0.31", "simics-fuzz/6.0.31"]
"6.0.33" = ["simics/6.0.33", "simics-fuzz/6.0.33"]
"6.0.34" = ["simics/6.0.34", "simics-fuzz/6.0.34"]
"6.0.35" = ["simics/6.0.35", "simics-fuzz/6.0.35"]
"6.0.36" = ["simics/6.0.36", "simics-fuzz/6.0.36"]
"6.0.38" = ["simics/6.0.38", "simics-fuzz/6.0.38"]
"6.0.39" = ["simics/6.0.39", "simics-fuzz/6.0.39"]
"6.0.40" = ["simics/6.0.40", "simics-fuzz/6.0.40"]
"6.0.41" = ["simics/6.0.41", "simics-fuzz/6.0.41"]
"6.0.42" = ["simics/6.0.42", "simics-fuzz/6.0.42"]
"6.0.43" = ["simics/6.0.43", "simics-fuzz/6.0.43"]
"6.0.44" = ["simics/6.0.44", "simics-fuzz/6.0.44"]
"6.0.45" = ["simics/6.0.45", "simics-fuzz/6.0.45"]
"6.0.46" = ["simics/6.0.46", "simics-fuzz/6.0.46"]
"6.0.47" = ["simics/6.0.47", "simics-fuzz/6.0.47"]
"6.0.48" = ["simics/6.0.48", "simics-fuzz/6.0.48"]
"6.0.49" = ["simics/6.0.49", "simics-fuzz/6.0.49"]
"6.0.50" = ["simics/6.0.50", "simics-fuzz/6.0.50"]
"6.0.51" = ["simics/6.0.51", "simics-fuzz/6.0.51"]
"6.0.52" = ["simics/6.0.52", "simics-fuzz/6.0.52"]
"6.0.53" = ["simics/6.0.53", "simics-fuzz/6.0.53"]
"6.0.54" = ["simics/6.0.54", "simics-fuzz/6.0.54"]
"6.0.55" = ["simics/6.0.55", "simics-fuzz/6.0.55"]
"6.0.56" = ["simics/6.0.56", "simics-fuzz/6.0.56"]
"6.0.57" = ["simics/6.0.57", "simics-fuzz/6.0.57"]
"6.0.58" = ["simics/6.0.58", "simics-fuzz/6.0.58"]
"6.0.59" = ["simics/6.0.59", "simics-fuzz/6.0.59"]
"6.0.60" = ["simics/6.0.60", "simics-fuzz/6.0.60"]
"6.0.61" = ["simics/6.0.61", "simics-fuzz/6.0.61"]
"6.0.62" = ["simics/6.0.62", "simics-fuzz/6.0.62"]
"6.0.63" = ["simics/6.0.63", "simics-fuzz/6.0.63"]
"6.0.64" = ["simics/6.0.64", "simics-fuzz/6.0.64"]
"6.0.65" = ["simics/6.0.65", "simics-fuzz/6.0.65"]
"6.0.66" = ["simics/6.0.66", "simics-fuzz/6.0.66"]
"6.0.67" = ["simics/6.0.67", "simics-fuzz/6.0.67"]
"6.0.68" = ["simics/6.0.68", "simics-fuzz/6.0.68"]
"6.0.69" = ["simics/6.0.69", "simics-fuzz/6.0.69"]
"6.0.70" = ["simics/6.0.70", "simics-fuzz/6.0.70"]
"6.0.71" = ["simics/6.0.71", "simics-fuzz/6.0.71"]
"6.0.72" = ["simics/6.0.72", "simics-fuzz/6.0.72"]
"6.0.73" = ["simics/6.0.73", "simics-fuzz/6.0.73"]
"6.0.74" = ["simics/6.0.74", "simics-fuzz/6.0.74"]
"6.0.75" = ["simics/6.0.75", "simics-fuzz/6.0.75"]
"6.0.76" = ["simics/6.0.76", "simics-fuzz/6.0.76"]
"6.0.77" = ["simics/6.0.77", "simics-fuzz/6.0.77"]
"6.0.78" = ["simics/6.0.78", "simics-fuzz/6.0.78"]
"6.0.79" = ["simics/6.0.79", "simics-fuzz/6.0.79"]
"6.0.80" = ["simics/6.0.80", "simics-fuzz/6.0.80"]
"6.0.81" = ["simics/6.0.81", "simics-fuzz/6.0.81"]
"6.0.82" = ["simics/6.0.82", "simics-fuzz/6.0.82"]
"6.0.83" = ["simics/6.0.83", "simics-fuzz/6.0.83"]
"6.0.84" = ["simics/6.0.84", "simics-fuzz/6.0.84"]
"6.0.85" = ["simics/6.0.85", "simics-fuzz/6.0.85"]
"6.0.86" = ["simics/6.0.86", "simics-fuzz/6.0.86"]
"6.0.87" = ["simics/6.0.87", "simics-fuzz/6.0.87"]
"6.0.88" = ["simics/6.0.88", "simics-fuzz/6.0.88"]
"6.0.89" = ["simics/6.0.89", "simics-fuzz/6.0.89"]
"6.0.90" = ["simics/6.0.90", "simics-fuzz/6.0.90"]
"6.0.91" = ["simics/6.0.91", "simics-fuzz/6.0.91"]
"6.0.92" = ["simics/6.0.92", "simics-fuzz/6.0.92"]
"6.0.93" = ["simics/6.0.93", "simics-fuzz/6.0.93"]
"6.0.94" = ["simics/6.0.94", "simics-fuzz/6.0.94"]
"6.0.95" = ["simics/6.0.95", "simics-fuzz/6.0.95"]
"6.0.96" = ["simics/6.0.96", "simics-fuzz/6.0.96"]
"6.0.97" = ["simics/6.0.97", "simics-fuzz/6.0.97"]
"6.0.98" = ["simics/6.0.98", "simics-fuzz/6.0.98"]
"6.0.99" = ["simics/6.0.99", "simics-fuzz/6.0.99"]
"6.0.100" = ["simics/6.0.100", "simics-fuzz/6.0.100"]
"6.0.101" = ["simics/6.0.101", "simics-fuzz/6.0.101"]
"6.0.102" = ["simics/6.0.102", "simics-fuzz/6.0.102"]
"6.0.103" = ["simics/6.0.103", "simics-fuzz/6.0.103"]
"6.0.104" = ["simics/6.0.104", "simics-fuzz/6.0.104"]
"6.0.105" = ["simics/6.0.105", "simics-fuzz/6.0.105"]
"6.0.106" = ["simics/6.0.106", "simics-fuzz/6.0.106"]
"6.0.107" = ["simics/6.0.107", "simics-fuzz/6.0.107"]
"6.0.108" = ["simics/6.0.108", "simics-fuzz/6.0.108"]
"6.0.109" = ["simics/6.0.109", "simics-fuzz/6.0.109"]
"6.0.110" = ["simics/6.0.110", "simics-fuzz/6.0.110"]
"6.0.111" = ["simics/6.0.111", "simics-fuzz/6.0.111"]
"6.0.112" = ["simics/6.0.112", "simics-fuzz/6.0.112"]
"6.0.113" = ["simics/6.0.113", "simics-fuzz/6.0.113"]
"6.0.114" = ["simics/6.0.114", "simics-fuzz/6.0.114"]
"6.0.115" = ["simics/6.0.115", "simics-fuzz/6.0.115"]
"6.0.116" = ["simics/6.0.116", "simics-fuzz/6.0.116"]
"6.0.117" = ["simics/6.0.117", "simics-fuzz/6.0.117"]
"6.0.118" = ["simics/6.0.118", "simics-fuzz/6.0.118"]
"6.0.119" = ["simics/6.0.119", "simics-fuzz/6.0.119"]
"6.0.120" = ["simics/6.0.120", "simics-fuzz/6.0.120"]
"6.0.121" = ["simics/6.0.121", "simics-fuzz/6.0.121"]
"6.0.122" = ["simics/6.0.122", "simics-fuzz/6.0.122"]
"6.0.123" = ["simics/6.0.123", "simics-fuzz/6.0.123"]
"6.0.124" = ["simics/6.0.124", "simics-fuzz/6.0.124"]
"6.0.125" = ["simics/6.0.125", "simics-fuzz/6.0.125"]
"6.0.126" = ["simics/6.0.126", "simics-fuzz/6.0.126"]
"6.0.127" = ["simics/6.0.127", "simics-fuzz/6.0.127"]
"6.0.128" = ["simics/6.0.128", "simics-fuzz/6.0.128"]
"6.0.129" = ["simics/6.0.129", "simics-fuzz/6.0.129"]
"6.0.130" = ["simics/6.0.130", "simics-fuzz/6.0.130"]
"6.0.131" = ["simics/6.0.131", "simics-fuzz/6.0.131"]
"6.0.132" = ["simics/6.0.132", "simics-fuzz/6.0.132"]
"6.0.133" = ["simics/6.0.133", "simics-fuzz/6.0.133"]
"6.0.134" = ["simics/6.0.134", "simics-fuzz/6.0.134"]
"6.0.135" = ["simics/6.0.135", "simics-fuzz/6.0.135"]
"6.0.136" = ["simics/6.0.136", "simics-fuzz/6.0.136"]
"6.0.137" = ["simics/6.0.137", "simics-fuzz/6.0.137"]
"6.0.138" = ["simics/6.0.138", "simics-fuzz/6.0.138"]
"6.0.139" = ["simics/6.0.139", "simics-fuzz/6.0.139"]
"6.0.140" = ["simics/6.0.140", "simics-fuzz/6.0.140"]
"6.0.141" = ["simics/6.0.141", "simics-fuzz/6.0.141"]
"6.0.142" = ["simics/6.0.142", "simics-fuzz/6.0.142"]
"6.0.143" = ["simics/6.0.143", "simics-fuzz/6.0.143"]
"6.0.144" = ["simics/6.0.144", "simics-fuzz/6.0.144"]
"6.0.145" = ["simics/6.0.145", "simics-fuzz/6.0.145"]
"6.0.146" = ["simics/6.0.146", "simics-fuzz/6.0.146"]
"6.0.147" = ["simics/6.0.147", "simics-fuzz/6.0.147"]
"6.0.148" = ["simics/6.0.148", "simics-fuzz/6.0.148"]
"6.0.149" = ["simics/6.0.149", "simics-fuzz/6.0.149"]
"6.0.150" = ["simics/6.0.150", "simics-fuzz/6.0.150"]
"6.0.151" = ["simics/6.0.151", "simics-fuzz/6.0.151"]
"6.0.152" = ["simics/6.0.152", "simics-fuzz/6.0.152"]
"6.0.153" = ["simics/6.0.153", "simics-fuzz/6.0.153"]
"6.0.154" = ["simics/6.0.154", "simics-fuzz/6.0.154"]
"6.0.155" = ["simics/6.0.155", "simics-fuzz/6.0.155"]
"6.0.156" = ["simics/6.0.156", "simics-fuzz/6.0.156"]
"6.0.157" = ["simics/6.0.157", "simics-fuzz/6.0.157"]
"6.0.158" = ["simics/6.0.158", "simics-fuzz/6.0.158"]
"6.0.159" = ["simics/6.0.159", "simics-fuzz/6.0.159"]
"6.0.160" = ["simics/6.0.160", "simics-fuzz/6.0.160"]
"6.0.161" = ["simics/6.0.161", "simics-fuzz/6.0.161"]
"6.0.162" = ["simics/6.0.162", "simics-fuzz/6.0.162"]
"6.0.163" = ["simics/6.0.163", "simics-fuzz/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-fuzz/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-fuzz/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-fuzz/6.0.166"]
