[package]
name = "simics-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = "4.3.0"
simics = { workspace = true }
tmp-dir.workspace = true

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics = { workspace = true }
artifact-dependency = { workspace = true }

[dev-dependencies]
simics = { workspace = true, features = ["link"] }
anyhow.workspace = true
tempdir = "0.3.7"
tracing = "0.1.37"
tracing-test = "0.2.4"
simics-fuzz = { workspace = true }


[features]
"6.0.163" = ["simics/6.0.163", "simics-fuzz/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-fuzz/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-fuzz/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-fuzz/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-fuzz/6.0.167"]
