# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-tests"
categories.workspace = true
description = "Test cases for Rust SIMICS bindings and TSFFS SIMICS fuzzer"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
anyhow.workspace = true
clap = "4.3.0"
simics = { workspace = true }
tmp-dir.workspace = true

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics = { workspace = true }
artifact-dependency = { workspace = true }

[dev-dependencies]
simics = { workspace = true, features = ["link"] }
anyhow.workspace = true
tracing = "0.1.37"
tracing-test = "0.2.4"
simics-fuzz = { workspace = true }


[features]
"6.0.163" = ["simics/6.0.163", "simics-fuzz/6.0.163"]
"6.0.164" = ["simics/6.0.164", "simics-fuzz/6.0.164"]
"6.0.165" = ["simics/6.0.165", "simics-fuzz/6.0.165"]
"6.0.166" = ["simics/6.0.166", "simics-fuzz/6.0.166"]
"6.0.167" = ["simics/6.0.167", "simics-fuzz/6.0.167"]
"6.0.168" = ["simics/6.0.168", "simics-fuzz/6.0.168"]
