[package]
name = "simics"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
artifact-dependency.workspace = true
cargo_metadata = "0.15.4"
clap = { version = "4.3.0", features = ["derive"] }
derive_builder = "0.12.0"
dotenvy_macro = "0.15.7"
itertools = "0.10.5"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.8.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simics-api = { workspace = true }
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
tmp-dir.workspace = true
tracing = "0.1.37"
version-tools.workspace = true
versions = "5.0.0"
walkdir = "2.3.3"

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[dev-dependencies]

[features]
link = []
"6.0.163" = ["simics-api/6.0.163"]
"6.0.164" = ["simics-api/6.0.164"]
"6.0.165" = ["simics-api/6.0.165"]
"6.0.166" = ["simics-api/6.0.166"]
"6.0.167" = ["simics-api/6.0.167"]
