# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics"
categories.workspace = true
description = "Tools for embedding SIMICS in Rust applications"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
artifact-dependency.workspace = true
cargo_metadata = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
derive_builder = "0.12.0"
dotenvy_macro = "0.15.7"
itertools = "0.11.0"
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.8.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simics-api = { workspace = true }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
tmp-dir.workspace = true
tracing = "0.1.37"
version-tools.workspace = true
versions = "5.0.0"
walkdir = "2.3.3"

[build-dependencies]
anyhow.workspace = true
simics-api.workspace = true
simics-link.workspace = true

[dev-dependencies]

[features]
link = []
"6.0.163" = ["simics-api/6.0.163"]
"6.0.164" = ["simics-api/6.0.164"]
"6.0.165" = ["simics-api/6.0.165"]
"6.0.166" = ["simics-api/6.0.166"]
"6.0.167" = ["simics-api/6.0.167"]
"6.0.168" = ["simics-api/6.0.168"]
"6.0.169" = ["simics-api/6.0.169"]
"6.0.170" = ["simics-api/6.0.170"]
"6.0.171" = ["simics-api/6.0.171"]
"6.0.172" = ["simics-api/6.0.172"]
