# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tsffs_module"
version = "0.1.0"
edition = "2021"
publish = false

# This metadata table configures the `SimicsProject` we'll eventually add this module to
[package.metadata.module]
# The relative path in this crate's root to the directory containing the Makefile for this module
module = "./stubs/tsffs_module"
# The relative path in the resulting SIMICS project where the built library should be placed so the
# Makefile(s) can find it (any subdirectories will be created if they do not exist)
lib = "./lib/libtsffs_module.so"
# The relative path in this crate's root to the directory containing the Makefile for this
# module's DML/C/Python interface specification
interface = "./stubs/tsffs_module-interface"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
simics = { workspace = true }
const_format = "0.2.30"
ffi-macro.workspace = true
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
raw-cstr.workspace = true
rng = "0.1.0"
rust-fsm = "0.6.1"
serde = { workspace = true, features = ["derive"] }
simics-api = { workspace = true }
simics-api-macro = { workspace = true }
yaxpeax-arch = "0.2.7"
yaxpeax-x86 = "1.1.5"
crc32fast = "1.3.2"
libafl.workspace = true
tracing = "0.1.37"
derive_builder = "0.12.0"
tracing-subscriber = { version = "0.3.17", features = [
    "ansi",
    "json",
    "fmt",
    "std",
] }
libafl_bolts.workspace = true

[dev-dependencies]

[build-dependencies]

[features]
"6.0.163" = ["simics-api/6.0.163", "simics/6.0.163", "simics-api-macro/6.0.163"]
"6.0.164" = ["simics-api/6.0.164", "simics/6.0.164", "simics-api-macro/6.0.164"]
"6.0.165" = ["simics-api/6.0.165", "simics/6.0.165", "simics-api-macro/6.0.165"]
"6.0.166" = ["simics-api/6.0.166", "simics/6.0.166", "simics-api-macro/6.0.166"]
"6.0.167" = ["simics-api/6.0.167", "simics/6.0.167", "simics-api-macro/6.0.167"]
"6.0.168" = ["simics-api/6.0.168", "simics/6.0.168", "simics-api-macro/6.0.168"]
